# cmd/docs/swagger.json
@@ -30,7 +30,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "login success!",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -57,7 +57,7 @@
                 "parameters": [
                     {
                         "description": "User email and password",
-                        "name": "password}",
+                        "name": "{object}",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -67,7 +67,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "user created",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -99,13 +99,6 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "This is a simple task list API",
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {}
             },
             "post": {
                 "description": "Create a new todo",
@@ -301,31 +294,8 @@
                 "title": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
                 "user_id": {
                     "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "todos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Todo"
-                    }
                 }
             }
         }
